updated search for city weather and local storage

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <div class="form-group">
               <input type="text" class="form-control" id="city-input">
             </div>
-            <button id="search-button" class="btn btn-primary">Submit</button>
+            <button id="search-button" class="btn btn-primary">Search</button>
           </div>
         </div>
         <div>
           <ul id="city-list" class="list-group"></ul>
         </div>
       </div>
-      <div class="col-10">
-        <div class="jumbotron jumbotron-fluid">
+      <div class="col-md-9">
+        <div id="current-weather" class="card">
           <div class="container">
             <h1 class="display-4">What's in the forecast?</h1>
             <!-- <div id="icon"><img id="wicon" src="" alt="Weather icon"></div> -->
@@ -63,10 +63,11 @@
 
 
       <!-- Optional JavaScript -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://code.jquery.com/jquery.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
       <script src="script.js"></script>
       <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
@@ -74,7 +75,7 @@
         crossorigin="anonymous"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
 </body>
 
 </html>
