update functions for get weather and adding to html

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
             <!-- <div id="icon"><img id="wicon" src="" alt="Weather icon"></div> -->
             <p class="lead city">Enter city by name to see today's weather and get your five day forecast.
             </p>
-            <p class="lead wind">Wind</p>
-            <p class="lead humidity">Humidity</p>
-            <p class="lead temp">Temp F°</p>
+            <p class="lead wind">Wind<span id="current-wind"></span></p>
+            <p class="lead humidity">Humidity<span id="current-humidity"></span></p>
+            <p class="lead temp">Temp F°<span id="current-temp"></span></p>
             <p class="lead uv-index">UV Index: <span class="badge" id="current-uv-level"></span></p>
           </div>
         </div>
