updated weather icons for current and forecast

--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
           <div class="col-md-10">
             <div id="current-weather" class="card">
               <div class="container">
-                <h1 class="display-4">What's in the forecast?</h1>
-                <p class="lead city">Enter city by name to see today's weather and get your five day forecast.
-                </p>
+                <h1 class="display-4">What's in the forecast?</h1><img id="current-icon">
                 <p class="lead wind">Wind:&nbsp;<span id="current-wind"></span>&nbsp;MPH</p>
                 <p class="lead humidity">Humidity:&nbsp;<span id="current-humidity"></span>%</p>
                 <p class="lead temp">Temp:&nbsp;<span id="current-temp"></span>&nbsp;F°</p>
