--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="assets/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>Weather Dashboard</title>
@@ -36,9 +36,9 @@
             <button id="search-button" class="btn btn-primary">Search</button>
           </div>
         </div>
-        <div>
-          <ul id="city-list" class="list-group"></ul>
-        </div>
+
+        <div id="city-list" style="flex-direction: column;"></div>
+
       </div>
       <div class="container">
         <div class="row">
@@ -50,7 +50,7 @@
                 <p class="lead humidity">Humidity:&nbsp;<span id="current-humidity"></span>%</p>
                 <p class="lead temp">Temp:&nbsp;<span id="current-temp"></span>&nbsp;F°</p>
                 <p class="lead uv-index">UV Index:&nbsp;<span class="badge" id="current-uv-level"></span></p>
-                
+
                 <div class="card-deck" id="card-deck">
                 </div>
               </div>
@@ -68,7 +68,7 @@
     <!-- Optional JavaScript -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script src="assets/script.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
