--- a/index.html
+++ b/index.html
@@ -16,61 +16,52 @@
 </head>
 
 <body>
-  <header>
-    <div class="heading">
-      <div>
-        <h1>Weather Dashboard</h1>
-      </div>
-    </div>
-  </header>
 
   <div class="container-fluid">
+    <header>
+      <h1>Weather Dashboard</h1>
+    </header>
+
     <div class="row">
-      <div class="col-md-2">
-        <div class="card" style="width: 22rem;">
-          <div class="card-body">
-            <h6>Search for a City:</h6>
-            <div class="form-group">
-              <input type="text" class="form-control" id="city-input">
-            </div>
-            <button id="search-button" class="btn btn-primary">Search</button>
-          </div>
+      <div class="col-sm-3">
+        <div class="card-header" id="city">
+          <h3>Search for a City:</h3>
+          <input type="text" id="city-input" placeholder="city" />
+          <br />
+          <button type="button" class="btn btn-info" id="city-btn">Search</button>
         </div>
-
-        <div id="city-list" style="flex-direction: column;"></div>
-
+        <ul class="list-group list-group-flush" id="city-list"></ul>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-10">
-            <div id="current-weather" class="card">
-              <div class="container">
-                <h1 class="display-4">What's in the forecast?</h1><img id="current-icon">
-                <p class="lead wind">Wind:&nbsp;<span id="current-wind"></span>&nbsp;MPH</p>
-                <p class="lead humidity">Humidity:&nbsp;<span id="current-humidity"></span>%</p>
-                <p class="lead temp">Temp:&nbsp;<span id="current-temp"></span>&nbsp;F°</p>
-                <p class="lead uv-index">UV Index:&nbsp;<span class="badge" id="current-uv-level"></span></p>
 
-                <div class="card-deck" id="card-deck">
-                </div>
-              </div>
-            </div>
+      <div class="col-sm-9">
+        <div class="card current-temp" id="current-weather">
+          <div class="row city-row">
+            <h2 class="col-sm-11" id="city-name">City:</h2>
+            <div class="col-sm-1">
+              <img id="current-icon"></div>
+            <div id="currentDate"></div>
           </div>
+          <p class="lead wind">Wind:&nbsp;<span id="current-wind"></span>&nbsp;MPH</p>
+          <p class="lead humidity">Humidity:&nbsp;<span id="current-humidity"></span>%</p>
+          <p class="lead temp">Temp:&nbsp;<span id="current-temp"></span>&nbsp;F°</p>
+          <p class="lead uv-index">UV Index:&nbsp;<span class="badge" id="current-uv-level"></span></p>
+
+          <div class="card-deck" id="card-deck"></div>
         </div>
       </div>
     </div>
+  </div>
+  </div>
 
 
 
 
-
-
-    <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/script.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  <!-- Optional JavaScript -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/script.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
